# jp-stress-diagnosis

./: .gitignore  CONTRIBUTING.md  JP 스트레스 체크 문항 설계 - 채점 기준.csv  README.md
.github/: labeler.yml
backend/: README.md  app.py  factor_definitions.json  pyproject.toml  questions.json  scoring_maps.json  scoring_maps_raw.json  test_api.py
backend/routers/: health.py  stress_check.py
backend/services/: diagnosis_service.py  email_service.py
backend/tests/: test_organization_diagnosis.py
backend/utils/: data_loader.py
docs/: README.md  data_extraction.md  scoring_map_guide.md  stress-check-logic.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Landing.jsx  Questionnaire.jsx  Result.jsx
tools/: extract_questions.py  generate_bg.py  reformat_scoring_maps.py  verify_stress_plot.ipynb
