[project]
name = "jp-stress-diagnosis-backend"
version = "0.1.0"
description = "Flask backend for JP Stress Diagnosis"
authors = [
    {name = "User",email = "user@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "reportlab (>=4.4.9,<5.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "requests (>=2.32.5,<3.0.0)"
]
